Remove mockgen from build

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,7 +65,7 @@ jobs:
       with:
         go-version-file: "go.mod"
     - run: |
-        make mockgen build
+        make build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
