--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
           go-version-file: "go.mod"
       - name: build
         run: |
-          make mockgen build
+          make build
   linting:
     needs: [build]
     name: lint
